Finishing admin page

--- a/index.html
+++ b/index.html
@@ -17,98 +17,194 @@
             </div>
             <div id="menu">
                 <ul>
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Messages</li>
-                    <li>History</li>
-                    <li>Task</li>
-                    <li>Community</li>
+                    <li><img src="./image/home.svg" alt="home">Home</li>
+                    <li><img src="./image/card-account-details-outline.svg" alt="profile">Profile</li>
+                    <li><img src="./image/message.svg" alt="messages">Messages</li>
+                    <li><img src="./image/history.svg" alt="history">History</li>
+                    <li><img src="./image/calendar-check.svg" alt="task">Task</li>
+                    <li><img src="./image/account-group.svg" alt="community">Community</li>
                 </ul>
             </div>
             <div id="setting">
                 <ul>
-                    <li>Setting</li>
-                    <li>Support</li>
-                    <li>Privacy</li>
+                    <li><img src="./image/cog.svg" alt="setting">Setting</li>
+                    <li><img src="./image/face-agent.svg" alt="support">Support</li>
+                    <li><img src="./image/shield-account-outline.svg" alt="privacy">Privacy</li>
                 </ul>
             </div>
         </div>
         <div id="header">
             <div id="top">
-                <img src="" alt="">
-                <input type="text">
-                <button></button>
-                <img src="" alt="">
-                <div>Muhammad Luthpi</div>
+                <div class="search">
+                    <img src="./image/magnify.svg" alt="search">
+                    <input type="text">
+                </div>
+                <button class="notification"><img src="./image/bell-ring-outline.svg" alt="notification"></button>
+                <div class="r-profile">
+                    <img src="./image/account-circle.svg" alt="account">
+                    <div>Muhammad Luthpi</div>
+                </div>
             </div>
             <div id="bottom">
-                <img src="" alt="">
-                <div>
-                    <div>Hi there,</div>
-                    <div>Muhammad Luthpi(@admin)</div>
+                <div class="l-profile">
+                    <img src="./image/account-circle.svg" alt="account">
+                    <div>
+                        <div>Hi there,</div>
+                        <div>Muhammad Luthpi(@admin)</div>
+                    </div>
                 </div>
-                <button>New</button>
-                <button>Upload</button>
-                <button>Share</button>
+                <div class="h-button">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             </div>
         </div>
         <div id="content-container">
             <div id="content">
-                Your Project
+                <div class="title">Your Project</div>
                 <div class="card-container">
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="text">
+                                <div class="title">Super Cool Project</div>
+                                <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores temporibus
+                                    laborum molestias dignissimos suscipit saepe dolorum ullam assumenda omnis cumque
+                                    iusto, dolore, ex hic repudiandae id laudantium nemo rerum sed.</div>
+                            </div>
+                            <div class="images">
+                                <img src="./image/star-plus-outline.svg" alt="star">
+                                <img src="./image/eye-plus-outline.svg" alt="seen">
+                                <img src="./image/share-variant-outline.svg" alt="share">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="text">
+                                <div class="title">Cool Project</div>
+                                <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores temporibus
+                                    laborum molestias dignissimos suscipit saepe dolorum ullam assumenda omnis cumque
+                                    iusto, dolore, ex hic repudiandae id laudantium nemo rerum sed.</div>
+                            </div>
+                            <div class="images">
+                                <img src="./image/star-plus-outline.svg" alt="star">
+                                <img src="./image/eye-plus-outline.svg" alt="seen">
+                                <img src="./image/share-variant-outline.svg" alt="share">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="text">
+                                <div class="title">Mega Project</div>
+                                <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores temporibus
+                                    laborum molestias dignissimos suscipit saepe dolorum ullam assumenda omnis cumque
+                                    iusto, dolore, ex hic repudiandae id laudantium nemo rerum sed.</div>
+                            </div>
+                            <div class="images">
+                                <img src="./image/star-plus-outline.svg" alt="star">
+                                <img src="./image/eye-plus-outline.svg" alt="seen">
+                                <img src="./image/share-variant-outline.svg" alt="share">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="text">
+                                <div class="title">Giga Project</div>
+                                <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores temporibus
+                                    laborum molestias dignissimos suscipit saepe dolorum ullam assumenda omnis cumque
+                                    iusto, dolore, ex hic repudiandae id laudantium nemo rerum sed.</div>
+                            </div>
+                            <div class="images">
+                                <img src="./image/star-plus-outline.svg" alt="star">
+                                <img src="./image/eye-plus-outline.svg" alt="seen">
+                                <img src="./image/share-variant-outline.svg" alt="share">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="text">
+                                <div class="title">Super Mega Giga Project</div>
+                                <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores temporibus
+                                    laborum molestias dignissimos suscipit saepe dolorum ullam assumenda omnis cumque
+                                    iusto, dolore, ex hic repudiandae id laudantium nemo rerum sed.</div>
+                            </div>
+                            <div class="images">
+                                <img src="./image/star-plus-outline.svg" alt="star">
+                                <img src="./image/eye-plus-outline.svg" alt="seen">
+                                <img src="./image/share-variant-outline.svg" alt="share">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="text">
+                                <div class="title">Project</div>
+                                <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores temporibus
+                                    laborum molestias dignissimos suscipit saepe dolorum ullam assumenda omnis cumque
+                                    iusto, dolore, ex hic repudiandae id laudantium nemo rerum sed.</div>
+                            </div>
+                            <div class="images">
+                                <img src="./image/star-plus-outline.svg" alt="star">
+                                <img src="./image/eye-plus-outline.svg" alt="seen">
+                                <img src="./image/share-variant-outline.svg" alt="share">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="announcement">
-                Announcement
+                <div class="title">Announcement</div>
                 <div class="card">
                     <div class="announcement">
-                        <div><strong>Site Maintenance</strong></div>
-                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                        <div class="title">Site Maintenance</div>
+                        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem tempore excepturi
+                            fugiat commodi officiis rem temporibus repellendus facilis ad tenetur possimus, impedit
+                            aperiam, modi praesentium quod quis! </div>
                     </div>
                     <div class="announcement">
-                        <div><strong>Community Share Day</strong></div>
-                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                        <div class="title">Community Share Day</div>
+                        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem tempore excepturi
+                            fugiat commodi officiis </div>
                     </div>
                     <div class="announcement">
-                        <div><strong>Update Privacy Policy</strong></div>
-                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                        <div class="title">Update Privacy Policy</div>
+                        <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem tempore excepturi
+                            fugiat commodi officiis rem temporibus repellendus </div>
                     </div>
                 </div>
             </div>
             <div id="trending">
-                Trending
+                <div class="title">Trending</div>
                 <div class="card">
                     <div class="trending">
-                        <img src="" alt="">
+                        <img src="./image/account-circle.svg" alt="account">
                         <div>
-                            <div>@</div>
+                            <div>@someone</div>
                             <div>some nice text</div>
                         </div>
                     </div>
                     <div class="trending">
-                        <img src="" alt="">
+                        <img src="./image/account-circle.svg" alt="account">
                         <div>
-                            <div>@</div>
+                            <div>@someone</div>
                             <div>some nice text</div>
                         </div>
                     </div>
                     <div class="trending">
-                        <img src="" alt="">
+                        <img src="./image/account-circle.svg" alt="account">
                         <div>
-                            <div>@</div>
+                            <div>@someone</div>
                             <div>some nice text</div>
                         </div>
                     </div>
                     <div class="trending">
-                        <img src="" alt="">
+                        <img src="./image/account-circle.svg" alt="account">
                         <div>
-                            <div>@</div>
+                            <div>@someone</div>
                             <div>some nice text</div>
                         </div>
                     </div>
